--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -46,6 +46,7 @@
     <string name="msg_random_now">Náhodné hodnoty</string>
     <string name="msg_random_access">Randomize on access</string>
     <string name="msg_random_boot">Generovat náhodné hodnoty při spuštění zařízení</string>
+    <string name="msg_usage">Updating usage data</string>
     <string name="msg_first"><b>Vývoj a testování aplikace XPrivacy probíhaly s maximální možnou péčí,
 nicméně je nemožné zaručit bezchybnou funkčnost na všech zařízeních a se všemi aplikacemi.
 \n\nPoužívejte pouze na vlastní riziko.</b>\n\nLicence aplikace:</string>
