--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -46,6 +46,7 @@
     <string name="msg_random_now">Véletlenszerűsítés</string>
     <string name="msg_random_access">Randomize on access</string>
     <string name="msg_random_boot">Véletlenszerűsítés boot után</string>
+    <string name="msg_usage">Updating usage data</string>
     <string name="msg_first"><b>Az XPrivacy fejlesztése és tesztelése nagy gondossággal történik,
 de lehetetlen garantálni hogy tökéletesen működjön az összes eszközön és az összes alkalmazással.
 \n\nCsak saját felelősségre.</b>\n\nNézze meg a licenszet is:</string>
