--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -46,6 +46,7 @@
     <string name="msg_random_now">ランダム化</string>
     <string name="msg_random_access">アプリにアクセスされたとき、バリューをランダム化する</string>
     <string name="msg_random_boot">端末を起動時にランダム化する</string>
+    <string name="msg_usage">Updating usage data</string>
     <string name="msg_first"><b>XPrivacyは細心の注意をして開発･テストしていますが、
 どの端末、どのアプリでも動作するという保証はありません。
 \n\n自己責任でお使いください。</b>\n\nライセンスの詳細はこちら:</string>
