--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -37,6 +37,7 @@
     <string name="msg_licensed" formatted="false">In licentie gegeven aan: %s</string>
     <string name="msg_loading">Laden</string>
     <string name="msg_filtering">Filteren</string>
+    <string name="msg_applying">Applying</string>
     <string name="msg_saved_to">Bewaard als %s</string>
     <string name="msg_no_restrictions">Geen beperkingen gevonden</string>
     <string name="msg_edit">Klik op het applicatiepictogram om alle beperkingen te wijzigen</string>
