--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -37,8 +37,7 @@
     <string name="msg_update">Atnaujinta</string>
     <string name="msg_licensed" formatted="false">licencija: %s</string>
     <string name="msg_loading">Palaukite...</string>
-    <string name="msg_filtering">Taikyti filtrus</string>
-    <string name="msg_applying">Applying</string>
+    <string name="msg_applying">Taikyti</string>
     <string name="msg_saved_to">Išsaugomi %s</string>
     <string name="msg_no_restrictions">Nerasta apribojimų</string>
     <string name="msg_edit">Spustelėkite programos piktogramą norėdami redaguoti apribojimus</string>
