--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -21,8 +21,8 @@
     <string name="menu_help">Pomoc</string>
     <string name="menu_all">Wszystko</string>
     <string name="menu_restriction_all">Przełącz restrykcje</string>
-    <string name="menu_clear_all">Clear all</string>
-    <string name="menu_restrict_all">Restrict all</string>
+    <string name="menu_clear_all">Wyczyść wszystko</string>
+    <string name="menu_restrict_all">Ogranicz wszystko</string>
     <string name="menu_usage_all">Przełącz filtry</string>
     <string name="menu_apply">Zastosuj szablon</string>
     <string name="menu_clear">Wyczyść</string>
@@ -36,7 +36,7 @@
     <string name="msg_update">Aktualizacja</string>
     <string name="msg_licensed" formatted="false">Licencjonowane dla: %s</string>
     <string name="msg_loading">Ładowanie</string>
-    <string name="msg_applying">Applying</string>
+    <string name="msg_applying">Stosowanie</string>
     <string name="msg_saved_to">Zapisane do %s</string>
     <string name="msg_no_restrictions">Nie znaleziono ograniczeń</string>
     <string name="msg_edit">Kliknij na ikonę aplikacji aby zmodyfikować poszczególne ograniczenia</string>
@@ -46,7 +46,7 @@
     <string name="msg_random_now">Losuj</string>
     <string name="msg_random_access">Losuj podczas dostępu</string>
     <string name="msg_random_boot">Losuj po restarcie</string>
-    <string name="msg_usage">Updating usage data</string>
+    <string name="msg_usage">Aktualizacja danych użycia</string>
     <string name="msg_first"><b>Dołożyliśmy wszelkich starań podczas programowania i testów XPrivacy.
     Jednak nie możemy zagwarantować, że będzie on działać bezbłędnie na każdym urządzeniu oraz z każdą aplikacją.
 \n\nUżywasz go całkowicie na własne ryzyko.</b>\n\nZobacz też licencję:</string>
