--- a/res/values-ga/strings.xml
+++ b/res/values-ga/strings.xml
@@ -47,6 +47,7 @@
     <string name="msg_random_access">Randomize on access</string>
     <string name="msg_random_boot">Randamaigh tar éis tosaithe</string>
     <string name="msg_usage">Updating usage data</string>
+    <string name="msg_restart">Application restart required</string>
     <string name="msg_first"><b>cúram mór aire do a fhorbairt agus a thástáil XPrivacy,
 áfach, go bhfuil sé dodhéanta a ráthú go mbeidh sé obair flawless ar gach gléas agus do gach agus gach iarratas.
 \n\nBain úsáid as ar do phriacal féin.</b>\n\nFéach freisin an ceadúnas:</string>
