--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -47,6 +47,7 @@
     <string name="msg_random_access">Randomize on access</string>
     <string name="msg_random_boot">Aleatório depois de iniciar</string>
     <string name="msg_usage">Updating usage data</string>
+    <string name="msg_restart">Application restart required</string>
     <string name="msg_first"><b>A aplicação XPrivacy foi desenvolvida e testada com todo o cuidado, 
 porém é impossível garantir que irá funcionar sem problemas em todos os dispositivos e com todas as aplicações.
 \n\nO uso desta aplicação é inteiramente por sua conta e risco.</b>\n\nVer também a licença:</string>
