--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -22,8 +22,8 @@
     <string name="menu_help">Pagalba</string>
     <string name="menu_all">Visos</string>
     <string name="menu_restriction_all">Perjungti aribojimus</string>
-    <string name="menu_clear_all">Clear all</string>
-    <string name="menu_restrict_all">Restrict all</string>
+    <string name="menu_clear_all">Išvalyti viską</string>
+    <string name="menu_restrict_all">Apriboti viską</string>
     <string name="menu_usage_all">Perjungti filtrą</string>
     <string name="menu_apply">Taikyti šabloną</string>
     <string name="menu_clear">Išvalyti</string>
@@ -47,8 +47,8 @@
     <string name="msg_random_now">Atsitiktiniai duomenys</string>
     <string name="msg_random_access">Atsitiktiniai duomenys prieeigai</string>
     <string name="msg_random_boot">Atsitiktiniai duomenys po perkrovimo</string>
-    <string name="msg_usage">Updating usage data</string>
-    <string name="msg_restart">Application restart required</string>
+    <string name="msg_usage">Atnaujinamas duomenų naudojimas</string>
+    <string name="msg_restart">Programą reikia perkrauti</string>
     <string name="msg_first"><b>Puiku, kad sutikote išbandyti XPrivacy.
 Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietaisu.
 \n\nTodėl naudokite visiškai savo pačių rizika.</b>\n\nTaip pat žiūrėkite licenciją:</string>
