--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -1,29 +1,29 @@
 <resources>
 
-    <string name="app_notxposed" formatted="false">Xposed sistemos versija %d+ neįdiegta</string>
-    <string name="app_notenabled">XPrivacy neaktyvuota Xposed sistemoje</string>
+    <string name="app_notxposed" formatted="false">Xposed programos versija %d+ neįdiegta</string>
+    <string name="app_notenabled">XPrivacy neaktyvuota Xposed programoje</string>
     <string name="app_wrongandroid">Tik nuo Android 4.0+ versijos</string>
-    <string name="app_version" formatted="false">XPrivacy versija: %s (%d)</string>
-    <string name="app_xversion" formatted="false">Xposed sistemos versija: %d</string>
+    <string name="app_version" formatted="false">XPrivacy programos versija: %s (%d)</string>
+    <string name="app_xversion" formatted="false">Xposed programos versija: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     
     <string name="menu_usage">Leidimų naudojimas</string>
     <string name="menu_refresh">Atnaujinti</string>
     <string name="menu_settings">Parametrai</string>
     <string name="menu_template">Šablonai</string>
-    <string name="menu_report">Pranešti apie problemą</string>
+    <string name="menu_report">Pranešti problemas</string>
     <string name="menu_export">Exportuoti</string>
     <string name="menu_import">Importuoti</string>
-    <string name="menu_submit">Pateikti leidimus</string>
-    <string name="menu_fetch">Apriboti leidimus</string>
+    <string name="menu_submit">Siųsti leidimus</string>
+    <string name="menu_fetch">Gauti leidimus</string>
     <string name="menu_theme">Keisti temą</string>
     <string name="menu_pro">Pro versija aktyvi</string>
     <string name="menu_about">Apie</string>
     <string name="menu_help">Pagalba</string>
     <string name="menu_all">Visos</string>
-    <string name="menu_restriction_all">Perjungti aribojimus</string>
+    <string name="menu_restriction_all">Išvalyti visus ribojimus</string>
     <string name="menu_clear_all">Išvalyti viską</string>
-    <string name="menu_restrict_all">Apriboti viską</string>
+    <string name="menu_restrict_all">Taikyti visus ribojimus</string>
     <string name="menu_usage_all">Perjungti filtrą</string>
     <string name="menu_apply">Taikyti šabloną</string>
     <string name="menu_clear">Išvalyti</string>
@@ -37,10 +37,10 @@
     <string name="msg_update">Atnaujinta</string>
     <string name="msg_licensed" formatted="false">licencija: %s</string>
     <string name="msg_loading">Palaukite...</string>
-    <string name="msg_applying">Taikyti</string>
+    <string name="msg_applying">Vykdoma</string>
     <string name="msg_saved_to">Išsaugomi %s</string>
-    <string name="msg_no_restrictions">Nerasta apribojimų</string>
-    <string name="msg_edit">Spustelėkite programos piktogramą norėdami redaguoti apribojimus</string>
+    <string name="msg_no_restrictions">Nerasta ribojimų</string>
+    <string name="msg_edit">Spustelėkite programos piktogramą norėdami redaguoti ribojimus</string>
     <string name="msg_sure">Įsitikinę?</string>
     <string name="msg_done">Atlikta</string>
     <string name="msg_reboot">Privaloma perkrauti prietaisą</string>
@@ -59,7 +59,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="restrict_clipboard">Iškarpinė</string>
     <string name="restrict_contacts">Kontaktai</string>
     <string name="restrict_dictionary">Žodynas (vartotojo)</string>
-    <string name="restrict_email">E-mail</string>
+    <string name="restrict_email">Elektroninis paštas</string>
     <string name="restrict_identification">Identifikacija (prietaiso)</string>
     <string name="restrict_internet">Internetas</string>
     <string name="restrict_location">Vieta (tiksli/apytikslė)</string>
@@ -85,7 +85,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="title_fused">Duomenų naudojimas</string>
     <string name="title_finternet">Interneto prieiga</string>
     <string name="title_fpermission">Aktyvūs leidimai</string>
-    <string name="title_frestricted">Apriboti leidimai</string>
+    <string name="title_frestricted">Riboti leidimai</string>
     <string name="title_fuser">Vartotojo programos</string>
     <string name="title_fsystem">Sistemos programos</string>
     <string name="title_fnot">Neriboti</string>
