Updated Italian translation

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -1,119 +1,120 @@
 <resources>
 
-    <string name="app_notxposed" formatted="false">Xposed framework versione %d+ non è installato</string>
-    <string name="app_notenabled">XPrivacy non è abilitato nell\'installer di Xposed framework</string>
-    <string name="app_wrongandroid">Solo per Android versione 4.0+</string>
-    <string name="app_version" formatted="false">Versione di XPrivacy: %s (%d)</string>
-    <string name="app_xversion" formatted="false">Versione di Xposed framework: %d</string>
+    <string name="app_notxposed" formatted="false">Není nainstalován Xposed framework verze %d+</string>
+    <string name="app_notenabled">Není povolen modul XPrivacy v Xposed installeru</string>
+    <string name="app_wrongandroid">Pouze pro Android verze 4.0+</string>
+    <string name="app_version" formatted="false">Verze XPrivacy: %s (%d)</string>
+    <string name="app_xversion" formatted="false">Verze Xposed frameworku: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
-    <string name="menu_usage">Utilizzo</string>
-    <string name="menu_refresh">Aggiorna</string>
-    <string name="menu_settings">Impostazioni</string>
-    <string name="menu_template">Template</string>
-    <string name="menu_report">Segnala problema</string>
-    <string name="menu_export">Esporta</string>
-    <string name="menu_import">Importa</string>
-    <string name="menu_submit">Invia restrizioni</string>
-    <string name="menu_fetch">Scarica restrizioni</string>
-    <string name="menu_theme">Cambia tema</string>
-    <string name="menu_pro">Versione Pro</string>
-    <string name="menu_about">Riguardo a</string>
-    <string name="menu_help">Aiuto</string>
-    <string name="menu_all">Tutto</string>
-    <string name="menu_restriction_all">Imposta restrizioni</string>
-    <string name="menu_clear_all">Deseleziona tutto</string>
-    <string name="menu_restrict_all">Seleziona tutto</string>
-    <string name="menu_usage_all">Imposta filtro</string>
-    <string name="menu_apply">Applica template</string>
-    <string name="menu_clear">Pulisci</string>
-    <string name="menu_app_launch">Lancia</string>
-    <string name="menu_app_settings">Impostazioni</string>
-    <string name="menu_app_store">Play Store</string>
-    <string name="menu_accounts">Seleziona account consentiti</string>
-    <string name="menu_applications">Seleziona le applicazioni permesse</string>
-    <string name="menu_contacts">Seleziona contatti consentiti</string>
-    <string name="msg_new">Nuovo</string>
-    <string name="msg_update">Aggiorna</string>
-    <string name="msg_licensed" formatted="false">Licenziato a: %s</string>
-    <string name="msg_loading">Caricamento in corso</string>
-    <string name="msg_applying">Applicazione in corso</string>
-    <string name="msg_saved_to">Salvato su %s</string>
-    <string name="msg_no_restrictions">Nessuna restrizione trovata</string>
-    <string name="msg_edit">Clicca l\'icona dell\'applicazione per modificare tutte le restrizioni</string>
-    <string name="msg_sure">Sei sicuro?</string>
-    <string name="msg_done">Fatto</string>
-    <string name="msg_reboot">Riavvio richiesto</string>
-    <string name="msg_random_now">Generazione casuale</string>
-    <string name="msg_random_access">Generazione casuale all\'accesso</string>
-    <string name="msg_random_boot">Generazione casuale all\'avvio</string>
-    <string name="msg_usage">Aggiornamento dati di utilizzo</string>
-    <string name="msg_restart">Richiesto riavvio dell\'applicazione</string>
-    <string name="msg_first"><b>XPrivacy è stato testato e sviluppato con cura,
-ma è impossibile garantire che funzionerà in modo impeccabile su ogni dispositivo e per ogni applicazione.
-\n\nUsalo a tuo rischio.</b>\n\nLeggi la licenza:</string>
-    <string name="restrict_accounts">Accounts (Google, Facebook, etc)</string>
-    <string name="restrict_browser">Browser (bookmarks/history)</string>
-    <string name="restrict_calendar">Calendario</string>
-    <string name="restrict_calling">Chiamate (Telefono, SMS, MMS)</string>
-    <string name="restrict_clipboard">Appunti</string>
-    <string name="restrict_contacts">Contatti</string>
-    <string name="restrict_dictionary">Dizionario (utente)</string>
+    <string name="menu_usage">Využití</string>
+    <string name="menu_refresh">Obnovit</string>
+    <string name="menu_settings">Nastavení</string>
+    <string name="menu_template">Šablona</string>
+    <string name="menu_report">Nahlásit problém</string>
+    <string name="menu_export">Export</string>
+    <string name="menu_import">Import</string>
+    <string name="menu_submit">Odeslat omezení</string>
+    <string name="menu_fetch">Stáhnout omezení</string>
+    <string name="menu_theme">Změnit téma</string>
+    <string name="menu_pro">Pro verze</string>
+    <string name="menu_about">O aplikaci</string>
+    <string name="menu_help">Nápověda</string>
+    <string name="menu_all">Vše</string>
+    <string name="menu_restriction_all">Přepnout omezení</string>
+    <string name="menu_clear_all">Vyčistit vše</string>
+    <string name="menu_restrict_all">Omezit vše</string>
+    <string name="menu_usage_all">Přepnout filtr</string>
+    <string name="menu_apply">Použít šablonu</string>
+    <string name="menu_clear">Vyčistit</string>
+    <string name="menu_app_launch">Spustit</string>
+    <string name="menu_app_settings">Informace o aplikaci</string>
+    <string name="menu_app_store">Obchod Play</string>
+    <string name="menu_accounts">Povolené účty aplikace</string>
+    <string name="menu_applications">Povolené aplikace aplikace</string>
+    <string name="menu_contacts">Povolené kontakty aplikace</string>
+    <string name="msg_new">Nová</string>
+    <string name="msg_update">Aktualizovaná</string>
+    <string name="msg_licensed" formatted="false">Licencováno na: %s</string>
+    <string name="msg_loading">Probíhá načítání</string>
+    <string name="msg_applying">Probíhá nastavování</string>
+    <string name="msg_saved_to">Uloženo do %s</string>
+    <string name="msg_no_restrictions">Nebyla nalezena žádná omezení</string>
+    <string name="msg_edit">Pro úpravu jednotlivých oprávnění aplikace klikněte na její ikonu</string>
+    <string name="msg_sure">Jste si jistý?</string>
+    <string name="msg_done">Hotovo</string>
+    <string name="msg_reboot">Vyžadován restart zařízení</string>
+    <string name="msg_random_now">Náhodné hodnoty</string>
+    <string name="msg_random_access">Náhodné hodnoty při přístupu</string>
+    <string name="msg_random_boot">Náhodné hodnoty při spuštění zařízení</string>
+    <string name="msg_usage">Probíhá aktualizace přístupových dat</string>
+    <string name="msg_restart">Vyžadován restart aplikace</string>
+    <string name="msg_first"><b>Vývoj a testování aplikace XPrivacy probíhaly s maximální možnou péčí,
+nicméně je nemožné zaručit bezchybnou funkčnost na všech zařízeních a se všemi aplikacemi.
+\n\nPoužívejte pouze na vlastní riziko.</b>\n\nLicence aplikace:</string>
+    <string name="restrict_accounts">Účty (Google, Facebook, atd.)</string>
+    <string name="restrict_browser">Prohlížeč (záložky/historie)</string>
+    <string name="restrict_calendar">Kalendář</string>
+    <string name="restrict_calling">Volání (telefon, SMS, MMS)</string>
+    <string name="restrict_clipboard">Schránka</string>
+    <string name="restrict_contacts">Kontakty</string>
+    <string name="restrict_dictionary">Slovník (uživatele)</string>
     <string name="restrict_email">E-mail</string>
-    <string name="restrict_identification">Identificazione (dispositivo)</string>
+    <string name="restrict_identification">Identifikace (zařízení)</string>
     <string name="restrict_internet">Internet</string>
-    <string name="restrict_location">Posizione (precisa/grossolana)</string>
-    <string name="restrict_media">Media (audio, foto, video)</string>
-    <string name="restrict_messages">Messaggi (SMS, MMS)</string>
-    <string name="restrict_network">Rete (indirizzi)</string>
-    <string name="restrict_notifications">Notifiche</string>
-    <string name="restrict_phone">Telefono (ID, numeri, chiamate)</string>
-    <string name="restrict_sensors">Sensori</string>
-    <string name="restrict_storage">Memoria (media, scheda SD)</string>
-    <string name="restrict_shell">Shell (comandi, superuser)</string>
-    <string name="restrict_system">Sistema (applicazioni installate)</string>
-    <string name="restrict_view">Visualizzazione (browser)</string>
-    <string name="title_categories">Categorie</string>
-    <string name="title_restrict">Spunta per limitare:</string>
-    <string name="title_filters">Filtri</string>
+    <string name="restrict_location">Poloha (přesná/přibližná)</string>
+    <string name="restrict_media">Média (hudba, fotky, videa)</string>
+    <string name="restrict_messages">Zprávy (SMS, MMS)</string>
+    <string name="restrict_network">Síť (adresace)</string>
+    <string name="restrict_notifications">Upozornění</string>
+    <string name="restrict_phone">Telefon (ID, čísla, hovory)</string>
+    <string name="restrict_sensors">Senzory</string>
+    <string name="restrict_storage">Úložiště (média, SD karta)</string>
+    <string name="restrict_shell">Konzole (příkazy, superuser)</string>
+    <string name="restrict_system">Systém (nainstalované aplikace)</string>
+    <string name="restrict_view">Zobrazení (v prohlížeči)</string>
+    <string name="title_categories">Kategorie</string>
+    <string name="title_restrict">Zaškrtněte pro omezení:</string>
+    <string name="title_filters">Filtry</string>
 
     <plurals name="title_active_filters">
-        <item quantity="one">1 filtro attivo</item>
-        <item quantity="other">%d filtri attivi</item>
+        <item quantity="one">1 aktivní filtr</item>
+        <item quantity="few">%d aktivní filtry</item>
+        <item quantity="other">%d aktivních filtrů</item>
     </plurals>
 
-    <string name="title_fused">Filtra per utilizzo dati</string>
-    <string name="title_finternet">Filtra per accesso a internet</string>
-    <string name="title_fpermission">Filtra per permesso</string>
-    <string name="title_frestricted">Filtra per restrizione</string>
-    <string name="title_fuser">Filtra per app utente</string>
-    <string name="title_fsystem">Filtra per app di sistema</string>
-    <string name="title_fnot">Nega</string>
-    <string name="settings_serial">Numero di serie#</string>
-    <string name="settings_lat">Latitudine</string>
-    <string name="settings_lon">Longitudine</string>
-    <string name="settings_mac">Indirizzo MAC</string>
-    <string name="settings_ip">Indirizzo IP</string>
-    <string name="settings_phone">Numero di Telefono</string>
+    <string name="title_fused">Filtrovat přístup k datům</string>
+    <string name="title_finternet">Filtrovat přístup k internetu</string>
+    <string name="title_fpermission">Filtrovat oprávnění</string>
+    <string name="title_frestricted">Filtrovat omezení</string>
+    <string name="title_fsystem">Filtrovat systémové aplikace</string>
+    <string name="title_fuser">Filtrovat uživatelské aplikace</string>
+    <string name="title_fnot">Opačně</string>
+    <string name="settings_serial">Sériové číslo</string>
+    <string name="settings_lat">Zeměpisná šířka</string>
+    <string name="settings_lon">Zeměpisná délka</string>
+    <string name="settings_mac">MAC adresa</string>
+    <string name="settings_ip">IP adresa</string>
+    <string name="settings_phone">Telefonní číslo</string>
     <string name="settings_id">Android ID</string>
-    <string name="settings_adid">ID Pubblicità</string>
-    <string name="settings_country">Nazione</string>
-    <string name="settings_operator">Operatore</string>
-    <string name="settings_subscriber">Subscriber ID</string>
-    <string name="settings_ua">User agent</string>
-    <string name="settings_general">Generale</string>
-    <string name="settings_fake_data">Dati falsi</string>
-    <string name="settings_global">Usa dati falsi globali</string>
-    <string name="settings_notify">Aggiorna notifiche</string>
-    <string name="settings_usage">Utilizzo dati di Android (richiede riavvio)</string>
-    <string name="settings_log">Debug log (richiede riavvio)</string>
-    <string name="settings_expert">Modalità esperto</string>
-    <string name="settings_dangerous">Limita funzioni pericolose</string>
-    <string name="help_application">Applicazione</string>
-    <string name="help_internet">ha permesso internet</string>
-    <string name="help_granted">ha permesso Android</string>
-    <string name="help_used">ha usato questi dati</string>
-    <string name="help_frozen">è disabilitato</string>
-    <string name="help_dangerous">è pericoloso</string>
-    <string name="help_half">parzialmente limitato</string>
+    <string name="settings_adid">Advertisement ID</string>
+    <string name="settings_country">Země</string>
+    <string name="settings_operator">Operátor</string>
+    <string name="settings_subscriber">IMSI</string>
+    <string name="settings_ua">Agent prohlížeče</string>
+    <string name="settings_general">Všeobecné</string>
+    <string name="settings_fake_data">Falešné údaje</string>
+    <string name="settings_global">Použít globální falešné údaje</string>
+    <string name="settings_notify">Upozorňovat při aktualizacích aplikací</string>
+    <string name="settings_usage">Přístup k datům systémem Android (vyžaduje restart)</string>
+    <string name="settings_log">Ukládat ladící záznam (vyžaduje restart)</string>
+    <string name="settings_expert">Režim experta</string>
+    <string name="settings_dangerous">Omezovat nebezpečné funkce</string>
+    <string name="help_application">Aplikace</string>
+    <string name="help_internet">má oprávnění k Internetu</string>
+    <string name="help_granted">má Android oprávnění</string>
+    <string name="help_used">přistupovala k těmto datům</string>
+    <string name="help_frozen">je zakázaná</string>
+    <string name="help_dangerous">je nebezpečná</string>
+    <string name="help_half">má částečná omezení</string>
 
 </resources>
